--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Generador de Recibos de Sueldo</title>
   </head>
 
-  <body class="bg-orange-400 text-[#502314]">
+  <body class="bg-orange-100 text-[#502314]">
     <script src="main.js"></script>
     <div class="text-2xl border-b border-[#502314] p-4 font-bold italic">
       Generador de Recibos de Sueldo
@@ -16,36 +16,60 @@
 
     <div class="flex flex-row p-4 gap-4">
       <div class="flex flex-col gap-2">
-        <spam>Nombre</spam>
-        <spam>Apellido</spam>
-        <spam>Cuil</spam>
-        <spam>Legajo</spam>
-        <spam>Categoria</spam>
-        <spam>Division</spam>
-        <spam>Departamento</spam>
-        <spam>Fecha de ingreso</spam>
-        <spam>Antiguedad</spam>
-        <spam>Sueldo Basico</spam>
-        <spam>Horas extras (50%)</spam>
-        <spam>Horas extras (100%)</spam>
-        <spam>Feriados</spam>
-        <spam>Faltas</spam>
-      </div>
-      <div class="flex flex-col gap-2">
-        <input type="text" name="nombre" id="nombre" />
-        <input type="text" name="apellido" id="apellido" />
-        <input type="number" name="cuil" id="cuil" />
-        <input type="number" name="legajo" id="legajo" />
-        <input type="text" name="categoria" id="categoria" />
-        <input type="text" name="division" id="division" />
-        <input type="text" name="departamento" id="departamento" />
-        <input type="date" name="ingreso" id="fechaingreso" />
-        <input type="number" name="antiguedad" id="antiguedad" />
-        <input type="number" name="basico" id="sueldobasico" />
-        <input type="number" name="extras50" />
-        <input type="number" name="extras100" />
-        <input type="number" name="feriado" />
-        <input type="number" name="faltas" />
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Nombre</spam><input type="text" name="nombre" id="nombre" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Apellido</spam><input type="text" name="apellido" id="apellido" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Cuil</spam>
+          <input type="number" name="cuil" id="cuil" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Legajo</spam>
+          <input type="number" name="legajo" id="legajo" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Categoria</spam>
+          <input type="text" name="categoria" id="categoria" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Division</spam>
+          <input type="text" name="division" id="division" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Departamento</spam>
+          <input type="text" name="departamento" id="departamento" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Fecha de ingreso</spam>
+          <input type="date" name="ingreso" id="fechaingreso" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Antiguedad</spam>
+          <input type="number" name="antiguedad" id="antiguedad" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Sueldo Basico</spam>
+          <input type="number" name="basico" id="sueldobasico" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Horas extras (50%)</spam>
+          <input type="number" name="extras50" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Horas extras (100%)</spam>
+          <input type="number" name="extras100" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Feriados</spam>
+          <input type="number" name="feriado" class="border-2 border-[#502314]" />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Faltas</spam>
+          <input type="number" name="faltas" class="border-2 border-[#502314]" />
+        </div>
         <button
           type="submit"
           onclick="generar()"
@@ -54,7 +78,60 @@
           Generar
         </button>
       </div>
-      <div id="blankid" class="ml-8"></div>
+      <div class="flex flex-col border-2 border-[#502314] w-full">
+        Cuando nada habite tu mejor lugar
+        Ni los pensamientos para no pensar
+        Porque estás más sola que la soledad
+        Y vivís mil vidas detestas los sueños que soñaste
+        
+
+        No dudes de mí, no llores mecha
+        Vamos por ahí
+
+        Mecha, mecha
+        Todo lo que hice en esta vida para estar con ella
+        Iba con sus rumbos y una estrella
+        Todo lo que pude haber podido por estar con ella
+
+        Mecha, mecha
+        Capaz que no te acuerdes lo de anoche y no te interesa
+        Eras un verano con estrellas
+        Todo lo que pude haber podido por estar con ella
+
+        Uh, uh, uh
+        Mecha, mecha
+
+        La manera dulce de lo natural
+        Y tus mezclas raras, y tu carnaval
+
+        Amiga nos rodea un laberinto vertical
+        Hay tanta soledad como en la Luna y tu lunar
+        Y desapareces cuando acabamos de empezar
+        La cosa más hermosa de la historia universal
+
+        Mecha, mecha
+        Todo lo que hice en esta vida para estar con ella
+        Iba con su rumbo y una estrella
+        Todo lo que pude haber podido por estar con ella
+
+        Mecha, mecha
+        Capaz que no te acuerdes lo de anoche y no te interesa
+        Eras un verano y una estrella
+        Y Todo lo que pude haber podido por estar con ella
+
+        Uh, uh, uh
+        Mecha, mecha
+        Capaz que no te acuerdes lo de anoche y no te interesa
+        Eras un verano con estrellas
+        Y todo lo que pude haber podido por estar con Mecha
+
+        Uh, uh, uh
+        Mecha, mecha
+
+        No dudes de mí no llores mecha, vamos por ahí
+      </div>
+        <div id="blankid" class="ml-8">
+      </div>
     </div>
   </body>
 </html>
