--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body class="bg-orange-100 text-[#502314]">
-    <script src="main.js"></script>
     <div class="text-2xl border-b border-[#502314] p-4 font-bold italic">
       Generador de Recibos de Sueldo
     </div>
@@ -78,61 +77,18 @@
           Generar
         </button>
       </div>
-      <div class="flex flex-col border-2 border-[#502314] w-full">
-        Cuando nada habite tu mejor lugar
-        Ni los pensamientos para no pensar
-        Porque estás más sola que la soledad
-        Y vivís mil vidas detestas los sueños que soñaste
-        
-
-        No dudes de mí, no llores mecha
-        Vamos por ahí
-
-        Mecha, mecha
-        Todo lo que hice en esta vida para estar con ella
-        Iba con sus rumbos y una estrella
-        Todo lo que pude haber podido por estar con ella
-
-        Mecha, mecha
-        Capaz que no te acuerdes lo de anoche y no te interesa
-        Eras un verano con estrellas
-        Todo lo que pude haber podido por estar con ella
-
-        Uh, uh, uh
-        Mecha, mecha
-
-        La manera dulce de lo natural
-        Y tus mezclas raras, y tu carnaval
-
-        Amiga nos rodea un laberinto vertical
-        Hay tanta soledad como en la Luna y tu lunar
-        Y desapareces cuando acabamos de empezar
-        La cosa más hermosa de la historia universal
-
-        Mecha, mecha
-        Todo lo que hice en esta vida para estar con ella
-        Iba con su rumbo y una estrella
-        Todo lo que pude haber podido por estar con ella
-
-        Mecha, mecha
-        Capaz que no te acuerdes lo de anoche y no te interesa
-        Eras un verano y una estrella
-        Y Todo lo que pude haber podido por estar con ella
-
-        Uh, uh, uh
-        Mecha, mecha
-        Capaz que no te acuerdes lo de anoche y no te interesa
-        Eras un verano con estrellas
-        Y todo lo que pude haber podido por estar con Mecha
-
-        Uh, uh, uh
-        Mecha, mecha
-
-        No dudes de mí no llores mecha, vamos por ahí
+      <div class="flex flex-col border-2 border-[#502314] w-full items-center">
+        <div class="flex flex-row items-center">
+          <div class="flex flex-col border-2 border-[#502314] p-10">Unidad</div>
+          <div class="flex flex-col border-2 border-[#502314]">Renumeratorio</div>
+          <div class="flex flex-col border-2 border-[#502314]">No Renumeratorio</div>
+          <div class="flex flex-col border-2 border-[#502314]">Descuento</div>
+        </div>
       </div>
-        <div id="blankid" class="ml-8">
+      <div id="blankid" class="ml-8">
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
 <!-- Basico
