--- a/index.html
+++ b/index.html
@@ -16,58 +16,130 @@
     <div class="flex flex-row p-4 gap-4">
       <div class="flex flex-col gap-2">
         <div class="flex flex-row justify-between gap-2">
-          <spam>Nombre</spam><input type="text" name="nombre" id="nombre" class="border-2 border-[#502314]" />
+          <spam>Nombre</spam
+          ><input
+            type="text"
+            name="nombre"
+            id="nombre"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
-          <spam>Apellido</spam><input type="text" name="apellido" id="apellido" class="border-2 border-[#502314]" />
+          <spam>Apellido</spam
+          ><input
+            type="text"
+            name="apellido"
+            id="apellido"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
-          <spam>Cuil</spam>
-          <input type="number" name="cuil" id="cuil" class="border-2 border-[#502314]" />
+          <spam>CUIL</spam>
+          <input
+            type="text"
+            name="cuil"
+            id="cuil"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Legajo</spam>
-          <input type="number" name="legajo" id="legajo" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="legajo"
+            id="legajo"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Categoria</spam>
-          <input type="text" name="categoria" id="categoria" class="border-2 border-[#502314]" />
+          <input
+            type="text"
+            name="categoria"
+            id="categoria"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Division</spam>
-          <input type="text" name="division" id="division" class="border-2 border-[#502314]" />
+          <input
+            type="text"
+            name="division"
+            id="division"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Departamento</spam>
-          <input type="text" name="departamento" id="departamento" class="border-2 border-[#502314]" />
+          <input
+            type="text"
+            name="departamento"
+            id="departamento"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Fecha de ingreso</spam>
-          <input type="date" name="ingreso" id="fechaingreso" class="border-2 border-[#502314]" />
+          <input
+            type="date"
+            name="ingreso"
+            id="fechaingreso"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Antiguedad</spam>
-          <input type="number" name="antiguedad" id="antiguedad" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="antiguedad"
+            id="antiguedad"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Sueldo Basico</spam>
-          <input type="number" name="basico" id="sueldobasico" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="basico"
+            id="sueldobasico"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Horas extras (50%)</spam>
-          <input type="number" name="extras50" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="extras50"
+            id="extras50"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Horas extras (100%)</spam>
-          <input type="number" name="extras100" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="extras100"
+            id="extras100"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Feriados</spam>
-          <input type="number" name="feriado" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="feriados"
+            id="feriados"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <div class="flex flex-row justify-between gap-2">
           <spam>Faltas</spam>
-          <input type="number" name="faltas" class="border-2 border-[#502314]" />
+          <input
+            type="number"
+            name="faltas"
+            id="faltas"
+            class="border-2 border-[#502314]"
+          />
         </div>
         <button
           type="submit"
@@ -80,12 +152,15 @@
       <div class="flex flex-col border-2 border-[#502314] w-full items-center">
         <div class="flex flex-row items-center">
           <div class="flex flex-col border-2 border-[#502314] p-10">Unidad</div>
-          <div class="flex flex-col border-2 border-[#502314]">Renumeratorio</div>
-          <div class="flex flex-col border-2 border-[#502314]">No Renumeratorio</div>
+          <div class="flex flex-col border-2 border-[#502314]">
+            Renumeratorio
+          </div>
+          <div class="flex flex-col border-2 border-[#502314]">
+            No Renumeratorio
+          </div>
           <div class="flex flex-col border-2 border-[#502314]">Descuento</div>
         </div>
-      </div>
-      <div id="blankid" class="ml-8">
+        <div id="blankid" class="ml-8"></div>
       </div>
     </div>
     <script src="main.js"></script>
