add: various fixes

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
           />
         </div>
         <br />
-        <label><input type="checkbox" id="check1" /> Calcular Vacaciones</label>
-        <label><input type="checkbox" id="check2" /> Calcular Aguinaldo</label>
+        <div id="checkid"></div>
         <button
           type="submit"
           onclick="generar();"
