--- a/payslip.html
+++ b/payslip.html
@@ -170,7 +170,8 @@
               <tbody>
                 <tr>
                   <td>Aguinaldo</td>
-                  <td id="pay-aguinaldo"></td>
+                  <td id="pay-aguinaldo">
+                  </td>
                 </tr>
                 <tr>
                   <td>Vacaciones</td>
